--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
-title: Physics 111 
-author: Firas Moosvi
-logo: images/logo.jpg
+title: Numerical Analysis 
+author: Colin Denniston
+logo: images/logo.png
 copyright: ""
 exclude_patterns: ["LICENSE.md", "README.md"]
 only_build_toc_files: true
@@ -57,31 +57,31 @@ sphinx:
     - substitution
 
     myst_substitutions:
-      INSTRUCTOR: "Dr. Firas Moosvi (he/his/him)"
-      PRONOUNCE: "Fur-az Moose-vee"
-      OFFICE: "ROOM 111"
+      INSTRUCTOR: "Colin Denniston"
+      PRONOUNCE: ""
+      OFFICE: "P&A ROOM 230"
       PHONE: "N/A"
-      COURSE_CODE: "PHYS 111"
-      SECTION: "001"
-      CREDITS: "3"
-      TITLE: "Introductory Physics for the Physical Sciences I"
-      PREREQS: "One of MATH 12, PREC 12, MATH 125, MATH 126 and PHYS 11 (Physics 12 is strongly recommended)."
-      COREQS: "Math 100"
-      TERM: "2020 Winter Term 2"
-      ROOM: "ROOM 100"
-      MEETING_TIMES: "Monday, Wednesday, Friday from 1-2 PM"
-      GRACE_PERIOD: "48 hour"
-      W_DATE_1: "11:59 PDT on January 22, 2021"
-      W_DATE_2: "11:59 PDT on March 26, 2021"
-      W_DATE_3: "11:59 PDT on March 26, 2021"
-      EXAM_PERIOD: "Friday December 10th - Wednesday, December 22"
-      CANVAS_ID: "63995"
-      CANVAS_LINK: "https://canvas.ubc.ca/courses/CANVAS_ID"
-      ZOOM_LINK: "[Zoom](https://canvas.ubc.ca/courses/CANVAS_ID/external_tools/15408)"
-      ANNOUNCEMENTS_LINK: "[Canvas Announcements](https://canvas.ubc.ca/courses/CANVAS_ID/announcements)"
-      COURSE_LINK: "https://firas.moosvi.com/courses/cosc123"
-      FORUM_LINK: "[Ed Discussion](https://edstem.org/us/join/fgh45hfgh)"
-      ANALYTICS_OPTOUT: "[complete this form](https://ubc.ca1.qualtrics.com/jfe/form/xxxxxxxxxx)"
-      FORMAT: "Lectures, Labs, Tutorials and they will all be running online in this course."
-      ASSOCIATE_HEAD: "Jake Bobowski [jake.bobowski@ubc.ca](mailto:jake.bobowski@ubc.ca)"
-      ANON_FEEDBACK: "[feedback form](https://cbc.ca)"
+      COURSE_CODE: ""
+      SECTION: ""
+      CREDITS: ""
+      TITLE: "Numerical Analysis"
+      PREREQS: "Undergraduate Mathematics to 2nd year, working knowledge of a high level computer language"
+      COREQS: ""
+      TERM: ""
+      ROOM: ""
+      MEETING_TIMES: ""
+      GRACE_PERIOD: ""
+      W_DATE_1: ""
+      W_DATE_2: ""
+      W_DATE_3: ""
+      EXAM_PERIOD: ""
+      CANVAS_ID: ""
+      CANVAS_LINK: ""
+      ZOOM_LINK: "[Zoom](https:)"
+      ANNOUNCEMENTS_LINK: "[Canvas Announcements](https://)"
+      COURSE_LINK: "https://"
+      FORUM_LINK: "[Ed Discussion](https://)"
+      ANALYTICS_OPTOUT: "[complete this form](https://)"
+      FORMAT: "Lectures, Labs, Tutorials and they will xxxx format"
+      ASSOCIATE_HEAD: ""
+      ANON_FEEDBACK: ""
