--- a/_toc.yml
+++ b/_toc.yml
@@ -1,29 +1,6 @@
 format: jb-book
 root: about/syllabus
 parts:
-- caption: Demo section
-  chapters:
-  - file: class/demo01/demo01_summary
-    title: Demo 1 - Data Science
-    sections:
-      - file: class/demo01/lecture1
-      - file: class/demo01/lecture2
-      - file: class/demo01/lecture3
-  - file: class/demo02/demo02_summary
-    title: Demo 2 - Introductory Physics
-    sections:
-      - file: class/demo02/videos
-      - file: class/demo02/homework
-      - file: class/demo02/readings
-      - file: class/demo02/lab
-      - file: class/demo02/learninglogs
-      - file: class/demo02/test
-      - file: class/demo03/demo03_summary
-        title: Demo 3 - Shakespeare
-      - file: class/demo04/demo04_summary
-        title: Demo 4 - Chemistry
-      - url: https://firas.moosvi.com/books/active-learning-technologies/jupyterdays/capacitor_talk/Capacitor.html
-        title: Capacitor Lecture
 - caption: Part 1 - Kinematics
   chapters:
   - file: class/week01/week01_summary
@@ -151,5 +128,11 @@ parts:
     sections:
       - file: extras/vi-editor
       - file: extras/helpful-software
+- caption: Demo section
+  chapters:
+  - file: class/demo01/lecture1
+    title: Demo for course template
+
+
 
 
