--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,7 @@ parts:
     sections:
       - file: class/ErrorsModule/Error_sources
       - file: class/ErrorsModule/TaylorExample
+      - file: class/ErrorsModule/FinitePrecision 
   - file: class/week03/week03_summary
     title: Week 3 - Chapter 3
     sections:
