--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,7 @@ parts:
     - file: class/ErrorsModule/TaylorExample
     - file: class/ErrorsModule/FinitePrecision
     - file: class/ErrorsModule/HornersAlgorithm
+    - file: class/ErrorsModule/RoundoffAmplification
 - caption: Part 2 - Dynamics
   chapters:
   - file: class/week05/week05_summary
