--- a/_toc.yml
+++ b/_toc.yml
@@ -10,50 +10,9 @@ parts:
     - file: class/ErrorsModule/HornersAlgorithm
     - file: class/ErrorsModule/RoundoffAmplification
     - file: class/ErrorsModule/BackwardForwardConditioning
-- caption: Part 2 - Dynamics
+- caption: Part 2 - Interpolation and Curve Fitting
   chapters:
-  - file: class/week05/week05_summary
-    title: Week 5 - Chapter 5
-    sections:
-      - file: class/week05/readings
-      - file: class/week05/videos
-      - file: class/week05/homework
-      - file: class/week05/lecture
-      - file: class/week05/test
-      - file: class/week05/lab
-      - file: class/week05/learninglogs
-  - file: class/week06/week06_summary
-    title: Week 6 - Week Off !!
-  - file: class/week07/week07_summary
-    title: Week 7 - Chapter 6
-    sections:
-      - file: class/week07/readings
-      - file: class/week07/videos
-      - file: class/week07/homework
-      - file: class/week07/lecture
-      - file: class/week07/test
-      - file: class/week07/lab
-      - file: class/week07/learninglogs
-  - file: class/week08/week08_summary
-    title: Week 8 - Chapter 7
-    sections:
-      - file: class/week08/readings
-      - file: class/week08/videos
-      - file: class/week08/homework
-      - file: class/week08/lecture
-      - file: class/week08/test
-      - file: class/week08/lab
-      - file: class/week08/learninglogs
-  - file: class/week09/week09_summary
-    title: Week 9 - Chapter 8
-    sections:
-      - file: class/week09/readings
-      - file: class/week09/videos
-      - file: class/week09/homework
-      - file: class/week09/lecture
-      - file: class/week09/test
-      - file: class/week09/lab
-      - file: class/week09/learninglogs
+    - file: class/InterpFit/InterpFit_summary
 - caption: Part 3 - Energy & Momentum
   chapters:
   - file: class/week10/week10_summary
