--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
   chapters:
     - file: class/InterpFit/InterpFit_summary
     - file: class/InterpFit/LagrangeForm
+    - file: class/InterpFit/BarycentricInterp
 - caption: Part 3 - Energy & Momentum
   chapters:
   - file: class/week10/week10_summary
