--- a/_toc.yml
+++ b/_toc.yml
@@ -16,6 +16,7 @@ parts:
     - file: class/InterpFit/LagrangeForm
     - file: class/InterpFit/BarycentricInterp
     - file: class/InterpFit/InterpErrors
+    - file: class/InterpFit/Chebyshev
 - caption: Part 3 - Energy & Momentum
   chapters:
   - file: class/week10/week10_summary
